# noda_turbo

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.frontend.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  retrospect_1_0_3_example - Sheet1.csv  tsconfig.json  turbo.json
apps/data-ingestion-service/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
apps/data-ingestion-service/src/: index.ts  instrumentation.ts
apps/data-ingestion-service/src/csv-processor/: index.ts
apps/data-ingestion-service/src/db/: index.ts
apps/data-ingestion-service/src/db-loader/: index.ts
apps/db-tools/: Dockerfile  main.py  requirements.txt
apps/docs/: Dockerfile  README.md  book.toml  package.json
apps/docs/book/: 404.html  architecture.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
apps/docs/src/: SUMMARY.md  architecture.md  introduction.md
apps/graphql-api/: Dockerfile  README.md  package.json
apps/graphql-api/src/: context.ts  db.ts  index.ts  instrumentaion.ts  instrumentation.ts  schema.ts
apps/llm-service/: Dockerfile  app.py  main.py  package.json  pyproject.toml  requirements.txt  train_vanna.py
apps/llm-service/src/: config.py  main.py
apps/llm-service/src/api/: chat.py
apps/llm-service/src/core/: chain.py
apps/llm-service/src/models/: schemas.py
apps/pdf-tools/: Dockerfile  main.py  requirements.txt
apps/rag-service/: Dockerfile  main.py  requirements.txt
apps/web/: .gitignore  Dockerfile  README.md  auth.ts  middleware.ts  next.config.ts  package.json  server.cjs  tsconfig.json
apps/web/app/: ApolloProviderWrapper.tsx  AuthProvider.tsx  auth.ts  globals.css  layout.tsx  page.tsx  page_error_backup.bak  page_old.bak
apps/web/app/components/: Map.tsx  (+1 more)
apps/web/components/: Dashboard.tsx
apps/web/context/: CopilotContext.tsx
apps/web/lib/: apollo-client.ts  apollo-rsc.ts  apollo-wrapper.tsx  utils.ts
apps/web/types/: next-auth.d.ts
observability/: grafana-datasources.yml  otel-collector-config.yml
(+94 files in other folders)
