[tool.poetry]
name = "llm-service"
version = "1.0.0"
description = "The Expert Analyst for NODA Copilot."
authors = ["NODA Team <codedhinakarr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
google-generativeai = "^0.5.4"
asyncpg = "^0.29.0"
pgvector = "^0.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"